--- a/1.流式布局/10.京东移动端页面/开发手册.md
+++ b/1.流式布局/10.京东移动端页面/开发手册.md
@@ -1,3 +1,5 @@
 1. 设置视口标签
 2. 引入初始化样式和自定义样式
 3. 设置 body 的宽度为 100%，以及 body 的最大宽度 max-width 和最小宽度 min-width。手机的最小宽度一般为 320px。
+4.
+5. 精灵图缩放的实现，先将整个精灵图缩小，然后对想要使用的图片重新进行测量位置
