--- a/1.流式布局/10.京东移动端页面/开发手册.md
+++ b/1.流式布局/10.京东移动端页面/开发手册.md
@@ -3,3 +3,14 @@
 3. 设置 body 的宽度为 100%，以及 body 的最大宽度 max-width 和最小宽度 min-width。手机的最小宽度一般为 320px。
 4.
 5. 精灵图缩放的实现，先将整个精灵图缩小，然后对想要使用的图片重新进行测量位置
+
+6. 图片相关：
+   如果遇到图片下方有空白间隙，需要修改 vertical-align 为 center
+
+7. 如何实现外部盒子添加圆角，在设置 border-radius 属性后还需要设置 overflow:hidden 隐藏内部盒子超出的部分。
+
+8. 京东移动端所采用的图片技术
+   dpg 图片压缩技术（自主研发的）
+   webp 图片格式（谷歌研发的）
+
+9. 如果整个模块都需要点击，则包裹在外面的应该是一个 a 标签，而不是 div。（若要对 a 标签设置宽高，无论是设置为 px，还是百分比，都需要转换为行内块元素或块元素，也可以通过设置浮动来实现。）
