--- a/2.rem适配布局/06.rem适配技术方案.md
+++ b/2.rem适配布局/06.rem适配技术方案.md
@@ -1,9 +1,9 @@
-1. 技术方案 1:less+媒体查询+rem
+1. 技术方案 1: less+媒体查询+rem
 
    - 首先选择一套标准的尺寸，以 750px 为例。750px 的宽度一般划分为 15 分，即每一份 50px。
    - 这个 50px 作为 html 标签的 font-size
    - 页面元素的 rem 值=页面元素在 750px 下的 px 值/html 标签的 font-size
-   - 通过媒体查询设置其他尺寸下 html 标签的 font-size 值，由于之前所有元素都设置为了 rem,所有此时的 rem 是代表相应比例的。
+   - 通过媒体查询设置其他尺寸下 html 标签的 font-size 值，由于之前所有元素都设置为了 rem,所以此时的 rem 是代表相应比例的。
      注意：新尺寸比如 375px，则 375px 与 html 的字体大小的比值应该跟 750px 的尺寸的比值相同，都等于 15，这样才能实现等比例缩放。
 
-2) 技术方案 2(推荐):flexible.js+rem
+2. 技术方案 2(推荐): flexible.js+rem
