--- a/3.响应式开发/6.阿里百秀/开发手册.md
+++ b/3.响应式开发/6.阿里百秀/开发手册.md
@@ -1,3 +1,12 @@
 1. 布局：
    - 中等屏幕和大屏幕下都是分为 3 列，分别占 2,7,5 份
    - 策略：先布局中等屏幕以上的布局，再根据实际需求修改小屏幕和超小屏幕的特殊样式。
+2. 一行中所有列的宽度加起来刚好 100%，如何实现某个元素与右边的元素间隔一定的距离：为该元素设置 padding-right，然后在里面添加一个盒子，将这个盒子的宽度设置为 100%即可。
+
+3. bootstrap 内置了清除浮动的样式，直接在父元素上添加 clearfix 类
+
+4. 如何实现在超小屏幕和小屏幕下导航栏水平显示：通过媒体查询设置每个元素为浮动。另外：在超小屏幕下，需要将文字设置小一点。
+
+5. 当在小屏幕想要删除某个元素并替换为另一个元素时，可以通过 hidden-sm 和 visible-sm 来实现。
+
+6. 如何实现不同的图片盒子在不同的屏幕下所占的百分比不同：通过媒体查询来设置图片盒子所占的百分比。
