--- a/4.flex伸缩布局/携程旅游/开发手册.md
+++ b/4.flex伸缩布局/携程旅游/开发手册.md
@@ -1,3 +1,7 @@
 1. 设置 body 的最小宽度为 320px，最大宽度为 540px。屏幕尺寸在这两个范围之外时，body 的宽度不会再发生变化。
 
 2. 固定定位由于相对的是整个可视区的定位，所有在设置宽度为百分比的时候相对的是整个屏幕，此时要想设置宽度，要么使用 min-width 和 max-width，要么使用 px。
+
+3. 若精灵图中图片的大小比我们实际想要的要大，则需要通过 background-size 将图片缩小，但此时还需要按比例修改 background-position 的值。
+
+4. 当图片与文字在一行时，且图片设置了上下边距时，此时若图片为行内块元素，由于存在 vertical-align 的影响，是不方便实现图片与文字居中对齐的。解决办法可以是将图片转换为块级元素，但这是文字会处于图片的下一行，所以图片再采用绝对定位，然后文字设置行高等于盒子的高度即可。
