--- a/2.flex伸缩布局/携程旅游/开发手册.md
+++ b/2.flex伸缩布局/携程旅游/开发手册.md
@@ -5,3 +5,9 @@
 3. 若精灵图中图片的大小比我们实际想要的要大，则需要通过 background-size 将图片缩小，但此时还需要按比例修改 background-position 的值。
 
 4. 当图片与文字在一行时，且图片设置了上下边距时，此时若图片为行内块元素，由于存在 vertical-align 的影响，是不方便实现图片与文字居中对齐的。解决办法可以是将图片转换为块级元素，但这是文字会处于图片的下一行，所以图片再采用绝对定位，然后文字设置行高等于盒子的高度即可。
+
+5. 如果想将比较大的背景图设置在某个盒子的右下角，则需先将背景的大小 background-size 的宽度设置小一点，高度设置为自适应，然后通过 background-position 设置背景的位置为 right bottom
+
+6. 渐变背景色不覆盖背景图片的实现：（通过逗号分隔来实现）
+   background: url(../images/price.png) no-repeat left bottom,
+   -webkit-linear-gradient(left, #ffbc49, #ffd252);
