--- a/2.flex伸缩布局/携程旅游/开发手册.md
+++ b/2.flex伸缩布局/携程旅游/开发手册.md
@@ -1,13 +1,17 @@
-1. 设置 body 的最小宽度为 320px，最大宽度为 540px。屏幕尺寸在这两个范围之外时，body 的宽度不会再发生变化。
+1. 设置 body 的最小宽度为 320px，最大宽度为 540px。即屏幕变换时，body 宽度的变化范围在 320px 和 540px 之间。
 
-2. 固定定位由于相对的是整个可视区的定位，所有在设置宽度为百分比的时候相对的是整个屏幕，此时要想设置宽度，要么使用 min-width 和 max-width，要么使用 px。
+2. 固定定位由于相对的是整个可视区的定位，所有在设置宽度为百分比的时候相对的是整个屏幕。若想某一元素的宽度与 body 保持一致，单单设置宽度为 100%是不行的。因为当可视区的宽度在 320px~540px 之外时，body 的宽度是没变的，但该元素的宽度是跟可视区的宽度保持的一致。所以需要将该元素的 min-width 和 max-width 与 body 的设置相同。
 
-3. 若精灵图中图片的大小比我们实际想要的要大，则需要通过 background-size 将图片缩小，但此时还需要按比例修改 background-position 的值。
+3. 为了便于观察，实际中的精灵图一般是 2 倍的，所以在使用时，需要通过 background-size 将图片缩小相应的倍数，此时还需要按比例修改 background-position 的值。
 
-4. 当图片与文字在一行时，且图片设置了上下边距时，此时若图片为行内块元素，由于存在 vertical-align 的影响，是不方便实现图片与文字居中对齐的。解决办法可以是将图片转换为块级元素，但这是文字会处于图片的下一行，所以图片再采用绝对定位，然后文字设置行高等于盒子的高度即可。
+4. 当理不清伪元素添加的背景图片为啥与文字无法居中对齐时，可以将伪元素设置为相对布局，然后将文字所在盒子的行高设置为盒子的高度。
 
-5. 如果想将比较大的背景图设置在某个盒子的右下角，则需先将背景的大小 background-size 的宽度设置小一点，高度设置为自适应，然后通过 background-position 设置背景的位置为 right bottom
+5. 如果想将比较大的背景图设置在某个盒子的右下角，则需先将背景的大小 background-size 的宽度设置小一点，高度会自动自适应，然后通过 background-position 设置背景的位置为 right bottom
 
-6. 渐变背景色不覆盖背景图片的实现：（通过逗号分隔来实现）
+6. 渐变背景色的设置：
+   background:linear-gradient(to right,#fff,black)
+   background:-webkit-linear-gradient(left,#fff,black)
+
+7. 渐变背景色会覆盖背景图片的问题：（通过逗号分隔来实现,不要单独写两个 background）
    background: url(../images/price.png) no-repeat left bottom,
    -webkit-linear-gradient(left, #ffbc49, #ffd252);
